app/styles/base/_helpers.scss
.main-container{
  display: flex;
  flex-flow: column wrap;
  justify-content: center;
  align-items: center;
  min-height: 100vh;
  height: 100%;
  margin: 0 auto;
}

.top-container{
  display: flex;
  flex-flow: column wrap;
  width: 350px;
  padding: 25px;
  background-color: #ebebeb;
  margin: 10px;
  .button-container{
    width: 100%;
    margin: 5px;
  }
}

.monster-container{
  position: relative;
  display: flex;
  align-items: center;
  justify-content: center;
  flex-flow: column wrap;
  max-width: 350px;
}

.name-container{
  input{
    background-color: $black;
    border: 1px solid $grey;
    color: $white;
    padding: 3px 3px 3px 8px;
    border-radius: 3px;
    margin: 5px;
    font-size: 16px;
    font-family: 'Open Sans', sans-serif;
  }
}

.parts-container{
  position: relative;
  width: 350px;
  height: 350px;
  background: #EBEBEB;
}

.hidden{
  display: none;
}

.relative{
  position: relative;
}

.absolute{
  position: absolute;
}

.center{
  text-align: center;
}

.trait-container{
  display: flex;
  flex-flow: row;
  .trait-box-one{
    display: flex;
    flex-flow: row wrap;
    width: 150px;
    margin: 10px 0;
  }
  .trait-box-two{
    display: flex;
    flex-flow: row wrap;
    width: 150px;
    margin: 10px 0;
  }
}

